[package]
name = "Midnight-blocklog"
version = "0.3.2"
edition = "2024"
authors = ["BTBF <b.t.b.f.corp@gmail.com>"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock"] }
clap = { version = "4.5.54", features = ["derive"] }
futures-util = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde_json = "1.0.139"
sha2 = "0.10.9"
sp-core = "39.0.0"
sp-runtime = "44.0.0"
scale-value = { version = "0.18.1", default-features = false }
substrate-api-client = { version = "1.20.0", default-features = false, features = ["tungstenite-client", "std", "sync-api"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
unicode-width = "0.2.1"
